# storyseq-sequence-narrative

./: .gitignore  README.md  config.json.example  pyproject.toml
prompt_development/BLAST/: draft_blast-agent_prompts.md
prompt_development/configuration/: draft_configuration-agent_prompt.md
src/story_seq/: __init__.py  cli.py  config.py  models.py
src/story_seq/agent/: __init__.py  blast_agent.py  configuration_agent.py  data_decoration_agent.py  reporter_agent.py  static_blast_agent_prompt.md  static_configuration_agent_prompt.md  static_reporter_agent_prompt.md  validation_agent.py
src/story_seq/pipeline/: blast_pipeline.py  pipeline.py  state.py  tasks.py
src/story_seq/util/: __init__.py  fasta_sketch.py
src/util/: README.md  fasta_sketch.py
test_data/: README.md
test_data/gene/nuc/: m002_il12_cassette.fna  m002_il12_cassette_and_RL2.fna  poxvirus.entry_fusion_component.NY_014-079.fna  poxvirus.hypothetical_protein.NY_014-012.fna  streptococcus_pneumoniae.PBP1a.fna  streptococcus_pneumoniae.TetM.fna
test_data/gene/prot/: human.fcgr2a.faa  mouse.fcgr2a.faa  poxvirus.entry_fusion_component.NY_014-079.faa  poxvirus.hypothetical_protein.NY_014-012.faa  streptococcus_pneumoniae.PBP1a.faa  streptococcus_pneumoniae.TetM.faa
test_data/genome/: poxvirus.NY_014.fna
tests/: __init__.py  test_cli.py  test_config.py  test_models.py
